--- a/_includes/links-list.html
+++ b/_includes/links-list.html
@@ -1,7 +1,4 @@
-<h1>Links</h1>
+<h1>链接</h1>
 <ul>
-  <li><a href="#">One</a></li>
-  <li><a href="#">Two</a></li>
-  <li><a href="#">Three</a></li>
-  <li><a href="#">Four</a></li>
+  <li><a href="https://itunes.apple.com/cn/app/tian-tian-ji-zhang-jian-dan/id954944283">我的APP：天天记账</a></li>
 </ul>
