--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,19 +6,22 @@
         <div class="col-md-9">
           <div class="article">
             <div>
-                <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.date | date: "%b %-d, %Y" }} - {{ page.title }}</a></h1>
-            {% if site.comments == true and page.comments == true and site.disqus != '' %}
-                <p class="author"><a href="#disqus_thread">Comments</a></p>
-            {% endif %}
-            <div class="post-content">
-            {{ content }}
-            </div>
-            {% if page.comments %}
-            <div id="disqus_thread">
-                <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-            </div>
-            {% endif %}
+                <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.title }}</a></h1>
+                <p class="author">
+                  Post on {{ page.date | date: "%b %-d, %Y" }}
+                  {% if site.comments == true and page.comments == true and site.disqus != '' %}
+                      <a href="#disqus_thread"> / 评论</a>
+                  {% endif %}
+                </p>
+                <div class="post-content">
+                {{ content }}
+                </div>
+                {% if page.comments %}
+                <div id="disqus_thread">
+                    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+                </div>
+                {% endif %}
             </div>
           </div>
           <div class="pagination">
