--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
                 <p class="author">
                   Post on {{ page.date | date: "%b %-d, %Y" }}
                   {% if site.comments == true and page.comments == true and site.disqus != '' %}
-                      <a href="#disqus_thread"> / 评论</a>
+                      <a href="#disqus_thread">评论</a>
                   {% endif %}
                 </p>
                 <div class="post-content">
