--- a/css/theme.css
+++ b/css/theme.css
@@ -1,6 +1,7 @@
 body {
     padding-top: 60px;
     padding-bottom: 60px;
+    font-family: "microsoft yahei" !important;
 }
 
 .copyright {
@@ -49,3 +50,5 @@ body {
 .author a {
     color: #ee4444;
 }
+
+
