--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -19,7 +19,7 @@
 
 			<div class="row">
 				<div class="col-lg-12 social">
-					<div class="fb-like" data-href="http://tiantianjizhang-tw.swalloworkstudio.com/" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+					<div class="fb-like" data-href="http://tiantianjizhang-tw.swalloworkstudio.com/" data-width="320" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
 				</div>
 			</div>
 
