驗證擁有權:在你的網站首頁中加入中繼標記

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fabicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
+    <meta name="google-site-verification" content="8_RKoCRg3njT6VkR51vYFeU20vSowKEAXBIAthl9NU8" />
 
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
