update keywords and sitemap.xml

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="天天記帳是一款貼心的記帳APP。介面簡約大方, 分類清晰, 操作簡單, 功能齊全。支援外幣, 預算, 多帳本。天天記帳讓記帳成為習慣！">
     <meta name="author" content="{{ site.author }}">
-    <meta name="keywords" content="記帳,記賬,記帳本,記賬本,帳本,免費,簡單,人氣,消費,支出,收支,帳單,實用,方便,帳簿,記帳簿,理財,管錢,幣別,發票,收據,管理,節約,主婦,free,可愛,spend,家計簿,貼心,外幣">
+    <meta name="keywords" content="記帳,記賬,記帳本,記賬本,帳本,免費,簡單,外幣,APP,人氣,消費,支出,收支,帳單,實用,方便,帳簿,記帳簿,理財,管錢,幣別,發票,收據,管理,節約,主婦,free,可愛,spend,家計簿,貼心,Pennyworth">
     <link rel="shortcut icon" href="fabicon/apple-icon-114x114.png">
     
     <link rel="apple-touch-icon" sizes="57x57" href="fabicon/apple-icon-57x57.png">
