--- a/_includes/header.html
+++ b/_includes/header.html
@@ -57,6 +57,11 @@
                         </a>
                         <br>
                         <br>
+                        <a href="https://kakeiboapi.oss-cn-shanghai.aliyuncs.com/tiantianjizhang-release45.apk">
+                        <img alt="Google Play" width="180" src="../img/appstore-apk.svg">
+                        </a>                        
+                        <br>
+                        <br>
                         <img alt="下載" width="132" src="../img/qr.svg">
 					</div>
 				</div>
