--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,9 @@
                 <li>
                     <a class="page-scroll" href="#contact">聯絡我們</a>
                 </li>
+                <li>
+                    <a href="https://xuanrljp.gitbook.io/tian-tian-ji-zhang-userguide/" target="_blank">FAQ</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
