add link to planner

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,9 @@
                 <li>
                     <a href="https://xuanrljp.gitbook.io/tian-tian-ji-zhang-userguide/" target="_blank">FAQ</a>
                 </li>
+                <li>
+                    <a href="//tiantianjizhang-tw.swalloworkstudio.com/lifemoney/" target="_blank">退休試算</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
